new font, updated text colors

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Coda&family=Koulen&display=swap"
             rel="stylesheet"
         />
+
         <title>Dylan Clifford Personal Trainer</title>
     </head>
     <body>
